# OptimizationMethodsHs

./: LICENSE  OptimizationMethods.cabal  README.md  task1.cabal
app/: Main.hs  Main2.hs  Main3.hs  Main4.hs  Main5.hs  Main6.hs
src/: Input.hs  Lib.hs  Task1.hs  Task2.hs  Task3.hs  Task4.hs  Task5.hs  Task6.hs
