name:                OptimizationMethods
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/vsulabs/OptimizationMethodsHs
license:             BSD3
license-file:        LICENSE
author:              Polshakov Dmitry
maintainer:          polsha3@gmail.com
copyright:           2017 Polshakov Dmitry
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Input, Task1, Task2, Task3, Task4, Task5, Task6
  build-depends:       base >= 4.7 && < 5, matrix > 0
  default-language:    Haskell2010

executable task1-exe
  hs-source-dirs:      app
  main-is:             Main1.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , OptimizationMethods
  default-language:    Haskell2010

executable task2-exe
  hs-source-dirs:      app
  main-is:             Main2.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , OptimizationMethods
  default-language:    Haskell2010

executable task3-exe
  hs-source-dirs:      app
  main-is:             Main3.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , OptimizationMethods
  default-language:    Haskell2010

executable task4-exe
  hs-source-dirs:      app
  main-is:             Main4.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, matrix
                     , OptimizationMethods
  default-language:    Haskell2010

executable task5-exe
  hs-source-dirs:      app
  main-is:             Main5.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, matrix
                     , OptimizationMethods
  default-language:    Haskell2010

executable task6-exe
  hs-source-dirs:      app
  main-is:             Main6.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, matrix
                     , OptimizationMethods
  default-language:    Haskell2010

test-suite task1-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , OptimizationMethods
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/vsulabs/OptimizationMethodsHs
