name:                task1
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Diadlo/task1#readme
license:             BSD3
license-file:        LICENSE
author:              Polshakov Dmitry
maintainer:          polsha3@gmail.com
copyright:           2017 Polshakov Dmitry
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable task1-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , task1
  default-language:    Haskell2010

test-suite task1-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , task1
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Diadlo/task1
